--- a/1.html
+++ b/1.html
@@ -18,9 +18,15 @@
 		<a href='https://www.google.com' target='_blank'><img src='https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png' alt='honor' width=400 height= 150></a>
 		<br />
 		<ul>
-		
-		
-		
+            <li>first</li>
+            <li>second</li>
+		    <li>third</li>
 		</ul>
+        <ol type="A">
+            <li>First</li>
+            <li>Second</li>
+            <li>Third</li>
+        </ol>
+
 	<body>
 </html>
