--- a/1.html
+++ b/1.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	
-	
+		<title>
+			first issue
+		</title>
 	<head>
 	<body>
 		<h1>
@@ -27,6 +28,38 @@
             <li>Second</li>
             <li>Third</li>
         </ol>
-
+		<table border="1">
+			<tr>col
+				<th>data1</th>
+				<td>data2</td>
+			</tr>
+			<tr>col2
+				<th>data3</th>
+				<td>data4</td>
+			</tr>
+		</table>
+		<div>row</div>
+		<div>row2</div>
+		<span>row3</span>
+		<span>row4</span>
+		<form>
+			<input type="text" name="name">
+			<br />
+			<input type="email" name="email">
+			<br />
+			<input type="color" name="color">
+			<br />
+			<input type="password" name="pass">
+			<br />
+			<input type="radio" name="kind" value="male" checked>male
+			<br />
+			<input type="radio" name="kind" value="female">female
+			<br />
+			<input type="checkbox" name="rules">قوانین
+			<br />
+			<textarea rows="10" cols="10">hey there</textarea>
+			<br />
+			<input type="submit" >
+		</form>
 	<body>
 </html>
