--- a/1.html
+++ b/1.html
@@ -3,10 +3,11 @@
 	<head>
 		<title>
 			first issue
+			<link rel="stylesheet" type="text/css" href="style.css">
 		</title>
 	<head>
 	<body>
-		<h1>
+		<h1 id="test">
 		opening of my first website
 		</h1>
 		<h2>
