--- a/1.html
+++ b/1.html
@@ -1,49 +1,49 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<link rel="stylesheet" type="text/css" href="style.css">
 		<title>
 			first issue
-			<link rel="stylesheet" type="text/css" href="style.css">
 		</title>
 	<head>
-	<body>
-		<h1 id="test">
+	<body class="body">
+		<h1 class="title">
 		opening of my first website
 		</h1>
-		<h2>
+		<h2 class="title">
 		second title
 		</h2>
-		<p>hello world &nbsp;here we go</p>
+		<p class="para">hello world here we go</p>
 		<br />
-		<p>farewell world</p>
-		<hr/>
-		<a href='https://www.google.com' target='_blank'><img src='https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png' alt='honor' width=400 height= 150></a>
+		<p class="para">farewell world</p>
 		<br />
-		<ul>
+		<a class="googl" href='https://www.google.com' target='_blank'><img class="googl" src='https://www.google.co.uk/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png' alt='honor'></a>
+		<br />
+		<ul class="list" id="1">
             <li>first</li>
             <li>second</li>
 		    <li>third</li>
 		</ul>
-        <ol type="A">
+        <ol class="list" type="A" id="2">
             <li>First</li>
             <li>Second</li>
             <li>Third</li>
         </ol>
-		<table border="1">
-			<tr>col
+		<table class="table" border="1">
+			<tr>
 				<th>data1</th>
 				<td>data2</td>
 			</tr>
-			<tr>col2
+			<tr>
 				<th>data3</th>
 				<td>data4</td>
 			</tr>
 		</table>
-		<div>row</div>
-		<div>row2</div>
-		<span>row3</span>
-		<span>row4</span>
-		<form>
+		<div class="text">row</div>
+		<div class="text">row2</div>
+		<span class="text">row3</span>
+		<span class="text">row4</span>
+		<form class="form">
 			<input type="text" name="name">
 			<br />
 			<input type="email" name="email">
@@ -56,11 +56,17 @@
 			<br />
 			<input type="radio" name="kind" value="female">female
 			<br />
-			<input type="checkbox" name="rules">قوانین
+			<input class="farsi" type="checkbox" name="rules">قوانین
 			<br />
 			<textarea rows="10" cols="10">hey there</textarea>
 			<br />
 			<input type="submit" >
 		</form>
-	<body>
+		<br class="repeat"><br class="repeat"><br class="repeat"><br class="repeat"><br class="repeat"><br class="repeat"><br class="repeat"><br class="repeat">
+		<br /><br /><br /><br /><br /><br /><br /><br />
+		<span class="hove">
+			<img class="lawrence" src="the_hunger_games_mockingjay_part_2-3840x2160.jpg" />
+		</span>
+		<br />
+	</body>
 </html>
